--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen"> 
-
+    <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
     <script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
     <script src="js/jquery.galleriffic.js" type="text/javascript"></script>
     <script src="js/jquery.opacityrollover.js" type="text/javascript"></script> 
@@ -30,7 +30,7 @@
                 	<div class="grid_12">
                     	<nav>
                             <ul class="menu">
-                                <li><a href="index.html">About Us</a></li>
+                                <li><a href="#about">About Us</a></li>
                                 <li><a href="#services">Services</a></li>
                                 <li><a href="#contact">Contact Us</a></li>
                             </ul>
@@ -44,8 +44,8 @@
         	<div class="main">
             	<div class="container_12">
                 	<div class="grid_9">
-                    	<h1>
-                            <a class="logo" href="index.html">hb<strong>e</strong>r</a>
+                    	<h1 class="logo">
+                          hb<strong>e</strong>r
                             <span>Renovations</span>
                         </h1>
                     </div>
@@ -58,7 +58,7 @@
     
 <!-- content -->
     <section id="content">
-        <div class="bg-top">
+        <div id="about" class="bg-top">
         	<div class="bg-top-2">
                 <div class="bg">
                     <div class="bg-top-shadow">
