--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <div class="wrapper">
                                             <div class="grid_12">
                                                 <div class="indent-left p2">
-                                                    <h3 class="p0" id="services">Services</h3>
+                                                    <h3 class="p0" id="services">SERVICES</h3>
                                                 </div>
                                                 <div class="wrapper p4">
                                                     <article class="grid_4 alpha">
@@ -179,7 +179,7 @@
     </section>
     
 	<!--==============================footer=================================-->
-    <footer id="contact">
+    <footer id="CONTACT">
         <div class="main">
 
         	<div class="container_12">
