--- a/index.html
+++ b/index.html
@@ -174,12 +174,11 @@
                                 </div>
                             <!--</div>-->
                         </div>
-
         </div>
     </section>
     
 	<!--==============================footer=================================-->
-    <footer id="CONTACT">
+    <footer id="contact">
         <div class="main">
 
         	<div class="container_12">
@@ -214,11 +213,6 @@
 
         </div>
     </footer>
-
-
-
-
-
 
     <script type="text/javascript">
 			$(window).load(function() {
