added portfolio html using dynamic gallery

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                     	<nav>
                             <ul class="menu">
                                 <li><a href="#about">About Us</a></li>
+                                <li><a href="portfolio.html">Portfolio</a></li>
                                 <li><a href="#services">Services</a></li>
                                 <li><a href="#contact">Contact Us</a></li>
                             </ul>
@@ -97,9 +98,9 @@
                                 </div>
                                 <div class="inner">
                                     <div class="wrapper">
-                                        <span class="title img-indent3">HELLO!</span>
+                                        <span class="title img-indent3">About</span>
                                         <div class="extra-wrap indent-top2">
-                                        	<strong>HBER Renovations</strong> is a 
+                                        	<strong>HBER Renovations</strong> is a Ottawa run renovations company specializing in multiple areas of interior and exterior renovations
                                         </div>
                                     </div>
                                 </div>
@@ -127,6 +128,7 @@
                                                             <ul>
                                                                 <li>Kitchen Repair/Renewal</li>
                                                                 <li>Finish basements</li>
+
                                                             </ul>
                                                         </div>
                                                     </article>
@@ -134,14 +136,20 @@
                                                         <div class="indent3">
                                                             <figure class="frame2 p2"><img src="images/service-img2.jpg" alt="" /></figure>
                                                             <p class="color-4 prev-indent-bot">Outdoor Decks</p>
-                                                            <p>Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt eque porro quisquam est, qui dolorem ipsum.</p>
+                                                            <ul>
+                                                                <li>Second floor decks</li>
+                                                                <li>Regular decks</li>
+                                                            </ul>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
                                                             <figure class="frame2 p2"><img src="images/service-img3.jpg" alt="" /></figure>
                                                             <p class="color-4 prev-indent-bot">Flooring</p>
-                                                            <p>Adipisci velit, sed quia non numquam eius modi tempora incidu labore et dolore magnam aliquam quaerat voluptatem.</p>
+                                                            <ul>
+                                                                <li>Wood flooring</li>
+                                                                <li>Tiling</li>
+
                                                         </div>
                                                     </article>
                                                 </div>
@@ -187,7 +195,7 @@
                             
                             <div class="wrapper">
                                 <h3 class="p2">Contact</h3>
-                                <figure class="img-indent frame2"><img src="images/contact-img1.jpg" alt="" /></figure>
+                               <!-- <figure class="img-indent frame2"><img src="images/contact-img1.jpg" alt="" /></figure>-->
                                 <p class="prev-indent-bot color-4">Hassane Berhmani</p>
                                 
                                 <ul class="prev-indent-bot">
