--- a/portfolio.html
+++ b/portfolio.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen"> 
-    <link rel="stylesheet" href="assets/touchTouch/touchTouch.css" />
+    <link rel="stylesheet" href="touchTouch/touchTouch.css" />
     <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
-    <script src="js/jquery-1.6.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="js/jquery.galleriffic.js" type="text/javascript"></script>
     <script src="js/jquery.opacityrollover.js" type="text/javascript"></script> 
     <script src="g-viewer/gallery-viewer.js" type="text/javascript"></script>
@@ -82,6 +82,7 @@
                                         <div class="wrapper">
 
     <div id="dynamic-gallery">
+
         	 
     </div>
 </div> </div></div></div>
@@ -124,6 +125,7 @@
 
         </div>
     </footer>
-<script src="assets/touchTouch/touchTouch.jquery.js"></script>
+<script src="touchTouch/touchTouch.jquery.js"></script>
+
 </body>
 </html>
