--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen"> 
     <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
-    <script src="js/jquery-1.8.3js" type="text/javascript"></script>
+    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="js/jquery.galleriffic.js" type="text/javascript"></script>
     <script src="js/jquery.opacityrollover.js" type="text/javascript"></script> 
       
@@ -149,6 +149,7 @@
                                                             <ul>
                                                                 <li>Wood flooring</li>
                                                                 <li>Tiling</li>
+                                                            </ul>
 
                                                         </div>
                                                     </article>
@@ -158,21 +159,29 @@
                                                         <div class="indent-left">
                                                             <figure class="frame2 p2"><img src="images/service-img4.jpg" alt="" /></figure>
                                                             <p class="color-4 prev-indent-bot">Custom Morrocan Living</p>
-                                                            <p>Doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
+                                                            <p>Morrocan living room customized to your living room size.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4">
                                                         <div class="indent3">
                                                             <figure class="frame2 p2"><img src="images/service-img5.jpg" alt="" /></figure>
                                                             <p class="color-4 prev-indent-bot">Home Foundations</p>
-                                                            <p>Sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt eque porro quisquam est, qui dolorem ipsum.</p>
+                                                            <ul>
+                                                                <li>Foundation Cracks</li>
+                                                                
+                                                            </ul>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
                                                             <figure class="frame2 p2"><img src="images/service-img6.jpg" alt="" /></figure>
                                                             <p class="color-4 prev-indent-bot">Brick and Masonry</p>
-                                                            <p>Adipisci velit, sed quia non numquam eius modi tempora incidu labore et dolore magnam aliquam quaerat voluptatem.</p> 
+                                                            <ul>
+                                                                <li>Brick Fireplace</li>
+                                                                <li>Pathways</li>
+                                                                <li>Patios</li>
+                                                                <li>Driveways</li>
+                                                            </ul>
                                                         </div>
                                                     </article>
                                                 </div>
