fixed phone number

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
                     <div class="grid_6 push_1" >
                          <span class="phone-numb color-4">Get a Quote Now!</span>
-                    	 <span class="phone-numb"><span>+1(613)</span> 276-7944</span>
+                    	 <span class="phone-numb">+1(613) 276-7944</span>
                         
                     </div>
                     
