modified images and email address

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,7 +105,7 @@
                                 <ul class="prev-indent-bot">
                                     <li>cell: (613) 276-7944</li>
                                     
-                                    <li>email: hber3@yahoo.fr</li>
+                                    <li>email: hber_reno@yahoo.ca</li>
                                 </ul>
                                 
                             </div>
