test social buttons

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>HBER Renovations Ottawa</title>
+    <title>HBER Home Renovations Ottawa</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
@@ -213,7 +213,7 @@
                                 <ul class="prev-indent-bot">
                                     <li>cell: (613) 276-7944</li>
                                     
-                                    <li>email: hber_reno@yahoo.ca</li>
+                                    <li>email: <a href="mailto:hber_reno@yahoo.ca">hber_reno@yahoo.ca</a></li>
                                 </ul>
                                 
                             </div>
