--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
         <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen">
 	<![endif]-->
 </head>
-<body id="page1">
+<body>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	<!--==============================header=================================-->
     <header>
     	<div class="row-1">
@@ -44,13 +52,13 @@
         <div class="row-2">
         	<div class="main">
             	<div class="container_12">
-                	<div class="grid_9">
+                	<div class="grid_8">
                     	<h1 class="logo">
                           hb<strong>e</strong>r
                             <span>Renovations</span>
                         </h1>
                     </div>
-                    
+                    <div class="fb-like" data-href="http://www.hber.ca" data-send="true" data-width="450" data-show-faces="true"></div>
                      <div class="clear"></div>
                 </div>
             </div>
