--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
       >
 <head>
     <title>HBER Home Renovations Ottawa</title>
-   
+    <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen"> 
