--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <link rel="stylesheet" href="css/ie.css" type="text/css" media="screen">
 	<![endif]-->
 </head>
-<body>
-    <div id="fb-root"></div>
+<body id="page1">
+<div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
@@ -58,7 +58,9 @@
                             <span>Renovations</span>
                         </h1>
                     </div>
-                    <div class="fb-like" data-href="http://www.hber.ca" data-send="true" data-width="450" data-show-faces="true"></div>
+                    <div class="grid_4">
+                        <div class="fb-like" data-href="http://hber.ca" data-send="true" data-width="450" data-show-faces="false"></div>
+                    </div>
                      <div class="clear"></div>
                 </div>
             </div>
