added social div

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 	<![endif]-->
 </head>
 <body id="page1">
+    <!-- facebook button script -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
@@ -30,6 +31,8 @@
   js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
+<!--twitter button script -->
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 	<!--==============================header=================================-->
     <header>
     	<div class="row-1">
@@ -59,7 +62,12 @@
                         </h1>
                     </div>
                     <div class="grid_4">
+                        <div class="social"
                         <div class="fb-like" data-href="http://hber.ca" data-send="true" data-width="450" data-show-faces="false"></div>
+
+                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hber.ca" data-text="Planning a Home Renovation? Check out" data-size="large">Tweet</a>
+                    </div>
+
                     </div>
                      <div class="clear"></div>
                 </div>
