--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
                         </h1>
                     </div>
                     <div class="grid_4">
-                        <div class="social"
-                        <div class="fb-like" data-href="http://hber.ca" data-send="true" data-width="450" data-show-faces="false"></div>
-
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hber.ca" data-text="Planning a Home Renovation? Check out" data-size="large">Tweet</a>
+                        <div class="social">
+                            <div class="fb-like" data-href="http://hber.ca" data-send="true" data-width="450" data-show-faces="false">
+                            </div>
+                            
+                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hber.ca" data-text="Planning a Home Renovation? Check out" data-size="large">Tweet</a>
+                        
+                        </div>
                     </div>
 
                     </div>
