open graph data added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <title>HBER Home Renovations Ottawa</title>
     <meta charset="utf-8">
+        <meta property="og:title" content="HBER Home Renovations Ottawa" />
+    <meta property="og:type" content="company" />
+    <meta property="og:url" content="http://hber.ca" />
+    <meta property="og:image" content="http://hber.ca/images/service-img1.jpg" />
+    <meta property="og:site_name" content="HBER Renovations" />
+    <meta property="fb:admins" content="100003031308934" />
     <meta content="Since 1999 HBER Renovation has satisfied tens of thousands of customers with a quality, custom, built renovation, in the USA & Canada. Our team take great pride in each project, to make your dream come true. We continue to work hard to maintain as the best quality and service oriented company in the renovation business." name="description"></meta>
     <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
@@ -122,7 +128,9 @@
                                     <div class="wrapper">
                                         <span class="title img-indent3">About US</span>
                                         <div class="extra-wrap indent-top2">
+                                            <article>
                                         	 Since 1999 HBER Renovation has satisfied tens of thousands of customers with a quality, custom, built renovation, in the USA & Canada. Our team take great pride in each project, to make your dream come true. We continue to work hard to maintain as the best quality and service oriented company in the renovation business.
+                                            </article>
                                         </div>
                                     </div>
                                 </div>
