fix for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -88,11 +88,11 @@
                         </h1>
                     </div>
                     <div class="grid_4">
-                        <div class="social">
-                        <div class="fb-like" data-href="http://hber.ca" data-send="true" data-width="450" data-show-faces="false"></div>
-
-                        <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hber.ca" data-text="Planning a Home Renovation? Check out" data-size="large">Tweet</a>
-                    </div>
+                          <div class="social">
+                            <div class="fb-like" data-href="http://hber.ca" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-font="verdana"></div>
+                            <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://hber.ca" data-text="Looking to renovate your home? Check out">Tweet</a>
+                        
+                        </div>
 
                     </div>
                     
