new gallery viewer

--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         <meta property="og:title" content="HBER Home Renovations Ottawa" />
     <meta property="og:type" content="company" />
     <meta property="og:url" content="http://hber.ca" />
-    <meta property="og:image" content="http://hber.ca/images/service-img1.jpg" />
+    <meta property="og:image" content="http://hber.ca/assets/images/service-img1.jpg" />
     <meta property="og:site_name" content="HBER Renovations" />
     <meta property="fb:admins" content="100003031308934" />
     <meta content="Since 1999 HBER Renovation has satisfied tens of thousands of customers with a quality, custom, built renovation, in the USA & Canada. Our team take great pride in each project, to make your dream come true. We continue to work hard to maintain as the best quality and service oriented company in the renovation business." name="description"></meta>
-    <link rel="stylesheet" href="css/reset.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/style.css" type="text/css" media="screen">
-    <link rel="stylesheet" href="css/grid.css" type="text/css" media="screen"> 
+    <link rel="stylesheet" href="assets/css/reset.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen">
+    <link rel="stylesheet" href="assets/css/grid.css" type="text/css" media="screen"> 
     <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
-    <script src="js/jquery-1.8.3.js" type="text/javascript"></script>
-    <script src="js/jquery.galleriffic.js" type="text/javascript"></script>
-    <script src="js/jquery.opacityrollover.js" type="text/javascript"></script> 
+    <script src="assets/js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.galleriffic.js" type="text/javascript"></script>
+    <script src="assets/js/jquery.opacityrollover.js" type="text/javascript"></script> 
       
 	<!--[if lt IE 7]>
         <div style=' clear: both; text-align:center; position: relative;'>
@@ -102,22 +102,22 @@
                                     <div id="thumbs" class="navigation">
                                         <ul class="thumbs noscript">
                                             <li>
-                                                <a class="thumb" href="images/gallery-img1.jpg" title=""> <img src="images/thumb-1.jpg" alt="" /><span></span> </a>
+                                                <a class="thumb" href="assets/images/gallery-img1.jpg" title=""> <img src="assets/images/thumb-1.jpg" alt="" /><span></span> </a>
                                             </li> 
                                             <li>
-                                                <a class="thumb" href="images/gallery-img2.jpg" title=""> <img src="images/thumb-2.jpg" alt="" /> <span></span></a>
+                                                <a class="thumb" href="assets/images/gallery-img2.jpg" title=""> <img src="assets/images/thumb-2.jpg" alt="" /> <span></span></a>
                                             </li> 
                                             <li>
-                                                <a class="thumb" href="images/gallery-img3.jpg" title=""> <img src="images/thumb-3.jpg" alt="" /> <span></span></a>
+                                                <a class="thumb" href="images/gallery-img3.jpg" title=""> <img src="assets/images/thumb-3.jpg" alt="" /> <span></span></a>
                                             </li> 
                                             <li>
-                                                <a class="thumb" href="images/gallery-img4.jpg" title=""> <img src="images/thumb-4.jpg" alt="" /> <span></span></a>
+                                                <a class="thumb" href="assets/images/gallery-img4.jpg" title=""> <img src="assets/images/thumb-4.jpg" alt="" /> <span></span></a>
                                             </li> 
                                             <li>
-                                                <a class="thumb" href="images/gallery-img5.jpg" title=""> <img src="images/thumb-5.jpg" alt="" /> <span></span></a>
+                                                <a class="thumb" href="assets/images/gallery-img5.jpg" title=""> <img src="assets/images/thumb-5.jpg" alt="" /> <span></span></a>
                                             </li> 
                                             <li>
-                                                <a class="thumb" href="images/gallery-img6.jpg" title=""> <img src="images/thumb-6.jpg" alt="" /> <span></span></a>
+                                                <a class="thumb" href="assets/images/gallery-img6.jpg" title=""> <img src="assets/images/thumb-6.jpg" alt="" /> <span></span></a>
                                             </li>           
                                         </ul>
                                     </div>
@@ -151,7 +151,7 @@
                                                 <div class="wrapper p4">
                                                     <article class="grid_4 alpha">
                                                         <div class="indent-left">
-                                                            <figure class="frame2 p2"><img src="images/service-img1.jpg" alt="Interior Renovation" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img1.jpg" alt="Interior Renovation" /></figure>
                                                             <p class="color-4 prev-indent-bot">Interior Renovation</p>
                                                             <ul>
                                                                 <li>Framing</li>
@@ -165,14 +165,14 @@
                                                     </article>
                                                     <article class="grid_4">
                                                         <div class="indent3">
-                                                            <figure class="frame2 p2"><img src="images/service-img2.jpg" alt="Decks" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img2.jpg" alt="Decks" /></figure>
                                                             <p class="color-4 prev-indent-bot">Decks</p>
                                                             <p>We put our experience to make your dream true. With our team we can help you choose the size and design that meets your specific need and budget.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="images/service-img3.jpg" alt="Flooring" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img3.jpg" alt="Flooring" /></figure>
                                                             <p class="color-4 prev-indent-bot">Flooring</p>
                                                             <ul>
                                                                 <li>Ceramic</li>
@@ -186,14 +186,14 @@
                                                 <div class="wrapper">
                                                     <article class="grid_4 alpha">
                                                         <div class="indent-left">
-                                                            <figure class="frame2 p2"><img src="images/service-img4.jpg" alt="Custom Morrocan Living Room" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img4.jpg" alt="Custom Morrocan Living Room" /></figure>
                                                             <p class="color-4 prev-indent-bot">Custom Morrocan Living Room</p>
                                                             <p>Morrocan living room customized to your living room size.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4">
                                                         <div class="indent3">
-                                                            <figure class="frame2 p2"><img src="images/service-img5.jpg" alt="Home Foundation" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img5.jpg" alt="Home Foundation" /></figure>
                                                             <p class="color-4 prev-indent-bot">Home Foundations</p>
                                                             <ul>
                                                                 <li>Foundation Cracks</li>
@@ -203,14 +203,14 @@
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="images/service-img6.jpg" alt="Interlocks" /></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img6.jpg" alt="Interlocks" /></figure>
                                                             <p class="color-4 prev-indent-bot">Interlocks</p>
                                                             <p>Our broad knowledge in the paving industry makes us qualified for your next road construction, walkway paving or step reconstruction project. Our detail-oriented staff ensure all jobs are done efficiently and effectively for high quality service.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="images/service-img7.jpg" alt="Fences"/></figure>
+                                                            <figure class="frame2 p2"><img src="assets/images/service-img7.jpg" alt="Fences"/></figure>
                                                             <p class="color-4 prev-indent-bot">Fences</p>
                                                             <p>Residential fences are made from PVC and are strong, durable and easy to maintain.  PVC fences are extremely well and are designed for Canadian weather.</p>
                                                         </div>
