--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"
-      >
+<html lang="en">
 <head>
     <title>HBER Home Renovations Ottawa</title>
     <meta charset="utf-8">
