--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,10 @@
                 	<div class="grid_12">
                     	<nav>
                             <ul class="menu">
-                                <li><a href="index.html#about">About Us</a></li>
+                                <li><a href="index.html">About Us</a></li>
                                 <li><a href="#portfolio">Portfolio</a></li>
-                                <li><a href="index.html#services">Services</a></li>
-                                <li><a href="#contact">Contact Us</a></li>
+                                <li><a href="services.html">Services</a></li>
+                                <li><a href="contact.html">Contact Us</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -157,7 +157,7 @@
     </footer>
     <script src="assets/touchTouch/touchTouch.jquery.js"></script>
 
-    <script src="gallery-viewer/gallery-viewer.js" type="text/javascript"></script>
+    <script src="assets/js/gallery-viewer.js" type="text/javascript"></script>
 
 
 </body>
