--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                     	<nav>
                             <ul class="menu">
                                 <li><a href="index.html">About Us</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="#contact">Contact Us</a></li>
                             </ul>
