--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     	<nav>
                             <ul class="menu">
                                 <li><a href="#about">About Us</a></li>
-                                <li><a href="portfolio.html">Portfolio</a></li>
+                                <!--<li><a href="portfolio.html">Portfolio</a></li>-->
                                 <li><a href="services.html">Services</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
