--- a/portfolio/decks.html
+++ b/portfolio/decks.html
@@ -67,7 +67,7 @@
                     	<nav>
                             <ul class="menu">
                                 <li><a href="../index.html">About Us</a></li>
-                                <li><a href="../portfolio">Portfolio</a></li>
+                                <!--<li><a href="../portfolio">Portfolio</a></li>-->
                                 <li><a href="../services.html">Services</a></li>
                                 <li><a href="../contact.html">Contact Us</a></li>
                             </ul>
