--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
                         <nav>
                             <ul class="menu">
                                 <li><a href="index.html">About Us</a></li>
-                                <<!--li><a href="portfolio.html">Portfolio</a></li>-->
+                                <!--li><a href="portfolio.html">Portfolio</a></li>-->
                                 <li><a href="#service">Services</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
                             </ul>
