added landscaping to services

--- a/services.html
+++ b/services.html
@@ -165,7 +165,7 @@
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="assets/images/service-img8.jpg" alt="Landscaping"/></figure>
+                                                            <figure class="frame2 p2"><a href="portfolio/landscaping.html"><img src="assets/images/service-img8.jpg" alt="Landscaping"/></a></figure>
                                                             <p class="color-4 prev-indent-bot">Landscaping</p>
                                                             <p>Professional landscaping services for residential and commercial areas</p>
                                                         </div>
