added more galleries for services

--- a/services.html
+++ b/services.html
@@ -134,14 +134,14 @@
                                                 <div class="wrapper">
                                                     <article class="grid_4 alpha">
                                                         <div class="indent-left">
-                                                            <figure class="frame2 p2"><img src="assets/images/service-img4.jpg" alt="Custom Morrocan Living Room" /></figure>
+                                                            <figure class="frame2 p2"><a href="portfolio/custom-morrocan.html"><img src="assets/images/service-img4.jpg" alt="Custom Morrocan Living Room" /></a></figure>
                                                             <p class="color-4 prev-indent-bot">Custom Morrocan Living Room</p>
                                                             <p>Morrocan living room customized to your living room size.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4">
                                                         <div class="indent3">
-                                                            <figure class="frame2 p2"><img src="assets/images/service-img5.jpg" alt="Home Foundation" /></figure>
+                                                            <figure class="frame2 p2"><a href="portfolio/home-foundations.html"><img src="assets/images/service-img5.jpg" alt="Home Foundation" /></a></figure>
                                                             <p class="color-4 prev-indent-bot">Home Foundations</p>
                                                             <ul>
                                                                 <li>Foundation Cracks</li>
@@ -151,14 +151,14 @@
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="assets/images/service-img6.jpg" alt="Interlocks" /></figure>
+                                                            <figure class="frame2 p2"><a href="portfolio/interlocks.html"><img src="assets/images/service-img6.jpg" alt="Interlocks" /></a></figure>
                                                             <p class="color-4 prev-indent-bot">Interlocks</p>
                                                             <p>Our broad knowledge in the paving industry makes us qualified for your next road construction, walkway paving or step reconstruction project. Our detail-oriented staff ensure all jobs are done efficiently and effectively for high quality service.</p>
                                                         </div>
                                                     </article>
                                                     <article class="grid_4 omega">
                                                         <div class="indent-right">
-                                                            <figure class="frame2 p2"><img src="assets/images/service-img7.jpg" alt="Fences"/></figure>
+                                                            <figure class="frame2 p2"><a href="portfolio/fences.html"><img src="assets/images/service-img7.jpg" alt="Fences"/></a></figure>
                                                             <p class="color-4 prev-indent-bot">Fences</p>
                                                             <p>Residential fences are made from PVC and are strong, durable and easy to maintain.  PVC fences are extremely well and are designed for Canadian weather.</p>
                                                         </div>
