--- a/portfolio/interior-renovations.html
+++ b/portfolio/interior-renovations.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../assets/touchTouch/touchTouch.css" />
     <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
     <script src="../assets/js/jquery-1.8.3.js" type="text/javascript"></script>
+    <script src="../assets/js/jQuery.XDomainRequest.js" type="text/javascript"></script>
     <script src="../assets/js/jquery.galleriffic.js" type="text/javascript"></script>
     <script src="../assets/js/jquery.opacityrollover.js" type="text/javascript"></script> 
     
