--- a/portfolio/interior-renovations.html
+++ b/portfolio/interior-renovations.html
@@ -15,9 +15,11 @@
     <link rel="stylesheet" href="../assets/css/grid.css" type="text/css" media="screen"> 
     <link rel="stylesheet" href="../assets/touchTouch/touchTouch.css" />
     <!--<link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>-->
+    <script>if (!(window.console && console.log)) { (function() { var noop = function() {}; var methods = ['assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error', 'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log', 'markTimeline', 'profile', 'profileEnd', 'markTimeline', 'table', 'time', 'timeEnd', 'timeStamp', 'trace', 'warn']; var length = methods.length; var console = window.console = {}; while (length--) { console[methods[length]] = noop; } }()); }
+</script>
     <script src="../assets/js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="../assets/js/jQuery.XDomainRequest.js" type="text/javascript"></script>
- 
+
  
     
       <style type="text/css">
