--- a/portfolio/interior-renovations.html
+++ b/portfolio/interior-renovations.html
@@ -18,6 +18,7 @@
     <!--<link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>-->
   <script>if (!(window.console && console.log)) { (function() { var noop = function() {}; var methods = ['assert', 'clear', 'count', 'debug', 'dir', 'dirxml', 'error', 'exception', 'group', 'groupCollapsed', 'groupEnd', 'info', 'log', 'markTimeline', 'profile', 'profileEnd', 'markTimeline', 'table', 'time', 'timeEnd', 'timeStamp', 'trace', 'warn']; var length = methods.length; var console = window.console = {}; while (length--) { console[methods[length]] = noop; } }()); }
 </script>
+ <link href='http://fonts.googleapis.com/css?family=Black+Ops+One' rel='stylesheet' type='text/css'>
     <script src="../assets/js/jquery-1.8.3.js" type="text/javascript"></script>
     <script src="../assets/js/jQuery.XDomainRequest.js" type="text/javascript"></script>
 
@@ -51,8 +52,7 @@
 </head>
 <body id="page1">
 
-    <!-- facebook button script -->
-<div id="fb-root"></div>
+
 
 	<!--==============================header=================================-->
     <header>
