--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta property="og:image" content="http://hber.ca/assets/images/service-img1.jpg" />
     <meta property="og:site_name" content="HBER Renovations" />
     <meta property="fb:admins" content="100003031308934" />
-    <meta content="Since 1999 HBER Renovation has satisfied tens of thousands of customers with a quality, custom, built renovation, in the USA & Canada. Our team take great pride in each project, to make your dream come true. We continue to work hard to maintain as the best quality and service oriented company in the renovation business." name="description"></meta>
+    <meta content="Since 1999 HBER Renovation has satisfied tens of thousands of customers with a quality, custom, built renovation, in the USA & Canada. Our team take great pride in each project, to make your dream come true. We continue to work hard to maintain as the best quality and service oriented company in the renovation business." name="description"/>
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css" media="screen">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="screen">
     <link rel="stylesheet" href="assets/css/grid.css" type="text/css" media="screen"> 
@@ -79,7 +79,7 @@
                      <div class="clear"></div>
                 </div>
             </div>
-        </div>    	
+          	
     </header>
     
 <!-- content -->
