fixed email address

--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                                 <ul class="prev-indent-bot">
                                     <li>cell: (613) 276-7944</li>
                                     
-                                    <li>email: <a href="mailto:hber_reno@yahoo.ca">hber_reno@yahoo.ca</a></li>
+                                    <li>email: <a href="mailto:hber_reno@yahoo.ca">hber_reno@yahoo.com</a></li>
                                 </ul>
                                 
                             </div>
