--- a/portfolio/interior-renovations.html
+++ b/portfolio/interior-renovations.html
@@ -120,6 +120,7 @@
 
 
 			<script src="../assets/touchTouch/touchTouch.jquery.js"></script>
+			<script src="../assets/js/lodash.min.js"></script>
 			<script src="../assets/js/imagesloaded.pkgd.min.js"></script>
 			<script src="../assets/js/masonry.pkgd.min.js"></script>
 			<script src="../assets/js/gallery-viewer.js" type="text/javascript"></script>
