implemented lazy load and modified files accordingly for interior-renovations only

--- a/portfolio/interior-renovations.html
+++ b/portfolio/interior-renovations.html
@@ -30,12 +30,18 @@
 	}
 	.fb-image {
 		width:33%;
+	
+		margin-bottom:10px;
+		
 	}
 	.fb-image img{
 	/*	height: 200;*/
-	width:100%;
-
+	width:98%;
+	padding-left: 1%;
+	padding-top:1%;
+	padding-bottom:1%;
 	}
+	
 	.w2{
 
 	}
